--- a/_config.yml
+++ b/_config.yml
@@ -113,10 +113,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Shuang-fu"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "熱衷以數據與邏輯做決策，專注投資、科技產業、AI 供應鏈與財報分析，並樂於探索旅遊與生活規劃。"
+  location         :
   email            :
   links:
     - label: "Email"
