Add Yoonho photo album

--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -28,6 +28,8 @@ main:
     url: /year-archive/
   - title: "Sample Collections"
     url: /collection-archive/
+  - title: "允浩的相簿"
+    url: /yoonho-album/
   - title: "Terms &amp; Privacy Policy"
     url: /terms/
 
